[package]
name = "appname"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.10"

[dependencies]
seed = { git = "https://github.com/seed-rs/seed" } # `master` is always compilable, formatted and linted
wasm-bindgen = "0.2.60"

[profile.release]
lto = true  # https://doc.rust-lang.org/nightly/cargo/reference/profiles.html#lto
opt-level = 'z' # https://doc.rust-lang.org/nightly/cargo/reference/profiles.html#opt-level
codegen-units = 1 # Use only one thread - it allows to do single-thread optimizations.

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os'] # `wasm-opt` (from `binaryen` tools) should optimize for size
